tests/fixtures/valid/run_logic.lby
fn main -> bool
    not false and true or false
