tests/fixtures/invalid/logical_type_mismatch.lby
fn main -> bool
    1 and true
